[package]
name = "numcmp"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>", "kennytm <kennytm@gmail.com>"]

description = "Comparison between differently typed numbers"
homepage = "https://github.com/kennytm/num-cmp"
documentation = "https://docs.rs/numcmp/"
repository = "https://github.com/kennytm/num-cmp"
keywords = ["numeric", "comparison", "compare"]
categories = ["algorithms"]
readme = "README.md"
license = "MIT/Apache-2.0"
